--- a/frontend/chat-app/src/components/MainPage/RightPanel/InputMessagePanel.module.css
+++ b/frontend/chat-app/src/components/MainPage/RightPanel/InputMessagePanel.module.css
@@ -1,4 +1,50 @@
 .main-container {
+    display: flex;
     width: 100%;
-    height: 100px;
+    height: 60px;
+    flex-shrink: 0;
+    background-color: transparent;
+    justify-content: center;
+    align-items: center;
+    padding: 2px 0px;
+    box-sizing: border-box;
+}
+
+.container {
+    max-width: 640px;
+    display: flex;
+    min-width: 400px;
+    /* background-color: aquamarine; */
+    height: 100%;
+    flex: 1;
+    align-items: center;
+}
+
+.input {
+    padding: 0px;
+    padding-left: 8px;
+    width: 100%;
+    height: 32px;
+    border: none;
+    border-radius: 10px;
+    outline: none;
+    transition: box-shadow 0.2s ease-in-out;
+}
+
+.input:focus {
+    box-shadow: 0 0 6px 0 #7ebdfc;
+}
+
+.container-icon {
+    cursor: pointer;
+    padding: 4px;
+    box-sizing: border-box;
+    border-radius: 50%;
+    background-color: white;
+    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
+    transition: box-shadow 0.2s ease-in-out;
+}
+
+.container-icon:hover {
+    box-shadow: 0 0 6px 0 #7ebdfc;
 }
