--- a/frontend/chat-app/src/components/MainPage/RightPanel/MessageComponent.module.css
+++ b/frontend/chat-app/src/components/MainPage/RightPanel/MessageComponent.module.css
@@ -1,29 +1,34 @@
 .container {
     display: flex;
     width: 100%;
-    padding: 0px 4px;
+    padding: 4px 0px;
+    box-sizing: border-box;
 }
 
 .me-pos {
     justify-content: end;
+    text-align: end;
 }
 
 .other-pos {
     justify-content: start;
+    text-align: start;
 }
 
 .message {
     display: flex;
     padding: 8px;
     /* border: solid 1px black; */
-    width: 200px;
+    max-width: 380px;
+    border-radius: 8px;
+    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
 }
 
 .text {
     font-family: 'Inter';
     font-size: 14px;
     font-weight: 400;
-    width: 100%;
+    width: fit-content;
 }
 
 .me-back {
