--- a/frontend/chat-app/src/components/MainPage/RightPanel/RightPanel.module.css
+++ b/frontend/chat-app/src/components/MainPage/RightPanel/RightPanel.module.css
@@ -3,7 +3,10 @@
     flex-direction: column;
     /* align-items: center; */
     gap: 0px;
-    flex: 1;
+    /* flex: 1; */
+    width: 100%;
+    height: 100vh;
+    max-height: 100vh;
     overflow: hidden;
 }
 
@@ -12,15 +15,23 @@
     display: flex;
     gap: 0px;
     flex: 1;
+    flex-direction: column;
+}
+
+.filling-container {
+    display: flex;
+    width: 100%;
+    height: 100%;
     justify-content: center;
 }
 
 .center-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     flex: 1;
     gap: 0px;
     min-width: 400px;
     max-width: 680px;
+    overflow: hidden;
 }
