--- a/frontend/chat-app/src/components/MainPage/RightPanel/TopPanel.module.css
+++ b/frontend/chat-app/src/components/MainPage/RightPanel/TopPanel.module.css
@@ -9,6 +9,7 @@
     align-items: center;
     box-sizing: border-box;
     box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.1);
+    flex-shrink: 0;
 }
 
 .group {
