functions of chats updating in MainPage were wroten

--- a/frontend/chat-app/src/components/MainPage/LeftPanel/ChatsContainer.module.css
+++ b/frontend/chat-app/src/components/MainPage/LeftPanel/ChatsContainer.module.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     flex: 1;
     overflow-y: auto;
-    opacity: 0.4;
+    filter: opacity(0.4);
     transition: opacity 0.2s ease-in-out;
 }
 
@@ -32,5 +32,5 @@
 }
 
 .container:hover {
-    opacity: 1;
+    filter: opacity(1);
 }
