--- a/frontend/chat-app/src/components/MainPage/RightPanel/ChatPanel.module.css
+++ b/frontend/chat-app/src/components/MainPage/RightPanel/ChatPanel.module.css
@@ -1,7 +1,7 @@
 .main-container {
     display: flex;
     /* flex-direction: column; */
-    /* flex: 1; */
+    flex: 1;
     width: 100%;
     justify-content: center;
     max-height: 100%;
@@ -15,6 +15,7 @@
 .messages-container {
     display: flex;
     flex-direction: column;
+    justify-content: end;
     gap: 0px;
     /* max-width: 100%;
     max-height: 100%; */
