--- a/frontend/chat-app/src/components/MainPage/RightPanel/ChatPanel.module.css
+++ b/frontend/chat-app/src/components/MainPage/RightPanel/ChatPanel.module.css
@@ -15,7 +15,7 @@
 .messages-container {
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    /* justify-content: end; */
     gap: 0px;
     /* max-width: 100%;
     max-height: 100%; */
