--- a/frontend/chat-app/src/components/MainPage/LeftPanel/ChatsContainer.module.css
+++ b/frontend/chat-app/src/components/MainPage/LeftPanel/ChatsContainer.module.css
@@ -5,8 +5,16 @@
     flex-direction: column;
     flex: 1;
     overflow-y: auto;
-    filter: opacity(0.4);
-    transition: opacity 0.2s ease-in-out;
+    /* filter: opacity(0.4);
+    transition: opacity 0.2s ease-in-out; */
+}
+
+.subcontainer {
+    display: flex;
+    width: 100%;
+    gap: 2px;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* Уменьшаем ширину скроллбара */
